RenderWidget captures mouse input when frameset is being resized

Dragging the frame dividers of a frameset should cause that RenderWidget
to receive all mouse input until a MouseUp is received, otherwise
the mouse moving over cross-process content, such as a PDF or an OOPIF,
will cause the resize to stop.

This CL triggers mouse capture in that case.

Bug: 878007
Change-Id: I96c4855954799c5f03d7dfc697ad399a31a561dd
Reviewed-on: https://chromium-review.googlesource.com/c/1298222
Commit-Queue: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602476}
Former-commit-id: 353d1a1474fcb021cca758394b412265eecd1360